--- a/app/src/main/res/layout/activity_create_route.xml
+++ b/app/src/main/res/layout/activity_create_route.xml
@@ -6,4 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".CreateRouteActivity">
 
+    <fragment
+        android:id="@+id/map"
+        android:name="com.example.routeplanner.MapsFragment"
+        class="com.example.routeplanner.MapsFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout="@layout/fragment_maps" />
 </androidx.constraintlayout.widget.ConstraintLayout>
