--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         android:layout_marginTop="100dp"
         android:layout_marginEnd="80dp"
         android:backgroundTint="#59F37617"
+        android:lineSpacingExtra="8sp"
         android:text="@string/button_run_route_text"
         android:textSize="21sp"
         app:layout_constraintEnd_toEndOf="parent"
