--- a/app/src/main/res/layout/activity_personal_statistics.xml
+++ b/app/src/main/res/layout/activity_personal_statistics.xml
@@ -6,4 +6,37 @@
     android:layout_height="match_parent"
     tools:context=".PersonalStatisticsActivity">
 
+    <TextView
+        android:id="@+id/displayspeed"
+        android:layout_width="151dp"
+        android:layout_height="48dp"
+        android:layout_marginBottom="194dp"
+        android:gravity="center_horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/displaydistance" />
+
+    <TextView
+        android:id="@+id/displaytime"
+        android:layout_width="151dp"
+        android:layout_height="48dp"
+        android:gravity="center_horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/displaydistance"
+        android:layout_width="151dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="179dp"
+        android:layout_marginBottom="262dp"
+        android:gravity="center_horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/displayspeed"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
