--- a/app/src/main/res/layout/activity_create_route.xml
+++ b/app/src/main/res/layout/activity_create_route.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".CreateRouteActivity">
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
@@ -13,5 +14,14 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_weight="3"
         tools:context=".CreateRouteActivity" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <fragment
+        android:id="@+id/create_route_interact"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="15"
+        tools:context=".CreateRouteActivity"
+        class= "com.example.routeplanner.CreateRouteInteractFragment"/>
+</LinearLayout>
