--- a/app/src/main/res/layout/activity_create_route.xml
+++ b/app/src/main/res/layout/activity_create_route.xml
@@ -7,21 +7,28 @@
     android:orientation="vertical"
     tools:context=".CreateRouteActivity">
 
+    <fragment
+        android:id="@+id/route_title_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="4"
+        tools:context=".CreateRouteActivity"/>
+
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:map="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="3"
+        android:layout_height="0dp"
+        android:layout_weight="30"
         tools:context=".CreateRouteActivity" />
 
     <fragment
         android:id="@+id/create_route_interact"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="15"
+        android:layout_height="0dp"
+        android:layout_weight="7"
         tools:context=".CreateRouteActivity"
         class= "com.example.routeplanner.CreateRouteInteractFragment"/>
 </LinearLayout>
