--- a/app/src/main/res/layout/fragment_create_route_interact.xml
+++ b/app/src/main/res/layout/fragment_create_route_interact.xml
@@ -15,6 +15,8 @@
         android:text="@string/button_create_route_text"
         android:textSize="21sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/button_undo_marker"
         app:layout_constraintTop_toTopOf="@+id/button_undo_marker" />
 
     <Button
