--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryRed">#FA4626</color>
     <color name="colorPrimaryDarkRed">#BD1600</color>
     <color name="colorAccentRed">#F1EE4A</color>'
-    <color name="colorBackgroundRed">#FFCCB4</color>
+    <color name="colorBackgroundRed">#FFDBCA</color>
     <color name="backgroundTintRed">#83F88D5D</color>
 
     <color name="colorPrimaryGreen">#50CF55</color>
