--- a/app/src/main/res/layout/fragment_create_route_interact.xml
+++ b/app/src/main/res/layout/fragment_create_route_interact.xml
@@ -11,20 +11,19 @@
         android:id="@+id/button_create_route"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="16dp"
         android:text="@string/button_create_route_text"
         android:textSize="21sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/button_undo_marker"
-        app:layout_constraintTop_toTopOf="@+id/button_undo_marker" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button_undo_marker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
         android:text="@string/remove_last_marker_text"
         android:textSize="21sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,7 +33,7 @@
         android:id="@+id/textView_calc_length"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="10dp"
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/textView_route_length"
         app:layout_constraintTop_toTopOf="@+id/textView_route_length" />
@@ -43,12 +42,25 @@
         android:id="@+id/textView_route_length"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="10dp"
         android:text="@string/route_length"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/button_undo_marker"
         app:layout_constraintTop_toBottomOf="@+id/button_undo_marker" />
+
+    <CheckBox
+        android:id="@+id/checkBox"
+        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
+        android:layout_width="124dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="6dp"
+        android:buttonTint="#000000"
+        android:checked="false"
+        android:scaleX="1.2"
+        android:scaleY="1.2"
+        android:text="Cyclic route"
+        app:layout_constraintEnd_toEndOf="@+id/button_create_route"
+        app:layout_constraintTop_toBottomOf="@+id/button_create_route" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
