Added onClickListener to RouteList

--- a/app/src/main/res/layout/activity_prepare_run_activity.xml
+++ b/app/src/main/res/layout/activity_prepare_run_activity.xml
@@ -10,8 +10,28 @@
         android:id="@+id/button_run_route"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Run route"
+        android:layout_marginEnd="16dp"
+        android:text="@string/button_run_route"
+        android:textSize="21sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.629" />
+
+    <Button
+        android:id="@+id/button_choose_route"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="44dp"
+        android:text="@string/button_choose_route"
+        android:textSize="21sp"
+        app:layout_constraintEnd_toStartOf="@+id/button_run_route"
+        app:layout_constraintTop_toTopOf="@+id/button_run_route" />
+
+    <ListView
+        android:layout_width="409dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="221dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
