--- a/app/src/main/res/layout/route_overview_activity.xml
+++ b/app/src/main/res/layout/route_overview_activity.xml
@@ -7,5 +7,6 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:descendantFocusability="blocksDescendants"
         android:id="@+id/listView"/>
 </RelativeLayout>
