Implemented selection of routes in PrepareRunActivity

--- a/app/src/main/res/layout/activity_prepare_run_activity.xml
+++ b/app/src/main/res/layout/activity_prepare_run_activity.xml
@@ -28,11 +28,36 @@
         app:layout_constraintEnd_toStartOf="@+id/button_run_route"
         app:layout_constraintTop_toTopOf="@+id/button_run_route" />
 
-    <ListView
-        android:layout_width="409dp"
-        android:layout_height="120dp"
-        android:layout_marginTop="221dp"
+    <TextView
+        android:id="@+id/textView_route_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="128dp"
+        android:text="@string/textView_route_name"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView_route_distance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/textView_route_distance"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_route_name" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="246dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
