--- a/app/src/main/res/layout/activity_personal_statistics.xml
+++ b/app/src/main/res/layout/activity_personal_statistics.xml
@@ -12,6 +12,8 @@
         android:layout_height="48dp"
         android:layout_marginBottom="194dp"
         android:gravity="center_horizontal"
+        android:textStyle="bold"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,6 +24,8 @@
         android:layout_width="151dp"
         android:layout_height="48dp"
         android:gravity="center_horizontal"
+        android:textStyle="bold"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,6 +38,8 @@
         android:layout_marginTop="179dp"
         android:layout_marginBottom="262dp"
         android:gravity="center_horizontal"
+        android:textStyle="bold"
+        android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/displayspeed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
