--- a/app/src/main/res/layout/route_overview_listadapter.xml
+++ b/app/src/main/res/layout/route_overview_listadapter.xml
@@ -33,14 +33,8 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/RouteCompletions"
-            android:text="@string/TimesRun"/>
+            android:id="@+id/IsCyclic"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/RouteAvgSpeed"
-            android:text="@string/AverageSpeed"/>
 
     </LinearLayout>
 </LinearLayout>
